--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "@react-three/drei": "9.14.3",
     "@react-three/fiber": "8.0.26",
     "@react-three/postprocessing": "2.4.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
     "gh-pages": "^6.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-howler": "^5.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-howler": "5.2.0",
     "react-scripts": "5.0.1",
     "three": "0.142",
-    "use-timer": "^2.0.1",
-    "web-vitals": "^2.1.4"
+    "use-timer": "2.0.1",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
